apps/base/homarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  type: ClusterIP
  selector: { app: homarr }
  ports:
    - name: http
      port: 80
      targetPort: 7575
