apps/base/homarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr-legacy
  namespace: homarr
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: haproxy-restricted
  tls:
    - hosts: ["homarr-legacy.rcrumana.xyz"]
      secretName: homarr-legacy-tls
  rules:
    - host: homarr-legacy.rcrumana.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homarr
                port:
                  number: 80
